--- a/index.html
+++ b/index.html
@@ -5,46 +5,68 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
-  </header>
-
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
-      </div>
+  <!-- Jumbotron -->
+  <div class="p-5 text-center bg-image rounded-3" style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');">
+  <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+  <div class="d-flex justify-content-center align-items-center h-200">
+  <div class="text-white">
+    <h1 class="mb-3">Weather Dashboard</h1>
+    <h4 class="mb-3">Find up to date weather information using the search function!</h4>
+  </div>
+</div>
+</div>
+</div>
+<!-- Jumbotron -->
+<main>
+<form id="search-form" class="form">
+  <div class="form">
+    <div class="input-group">
+      <input type="search" class="search-bar" placeholder="Enter City Name">
+      <button>
+        Search
+      </button class="search-button" id="searchBtn">
     </div>
   </div>
+</form> 
+<div class="weather-container">  
+  <div class="weather-today"><h1>Todays Weather</h1></div>
+  <div class="area">
+    <h2 class="temp">22°C</h2>
+    <h3 class="city">Manchester</h3>
+  </div>
+    <div class="details">
+      <div class="col">
+        <img class="weather-icon" src="/images/rain.jpg">
+        <div>
+         <p class="humidity">50%</p>
+          <p>humidity</p>
+        </div>
+      </div>
+      <div class="col">
+        <img >
+        <div>
+         <p class="wind">15km/ph</p>
+          <p>Wind Speed</p>
+        </div>
+      </div>
+   </div>
+  </div>
+</div>
+</main>
+/*
+<hr class="hr weather-hr" />
+        <div class="list-group" id="history"></div>
+      </div>
+*/
 
+  <!--bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <!-- Day.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
